--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-slate-200">
-    <div class="flex flex-row justify-around items-center bg-stone-700 w-5/6 m-auto w-4/5">
+    <div class="flex flex-row justify-around items-center bg-stone-700 m-auto w-4/5">
         <div class="flex flex-col bg-slate-50 p-2 w-1/4 outline outline-offset-0 rounded-lg ">
             <h2 class="text-center text-xl font-bold">Overzicht</h2>
             <div class="text-right m-auto">
