--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
             <div class="flex-shrink-0 flex items-center justify-center w-16 bg-yellow-500 text-white text-sm font-medium rounded-l-md">T</div>
             <div class="flex flex-1 items-center justify-between truncate rounded-r-md border-t border-r border-b border-gray-200 bg-white">
               <div class="flex-1 truncate px-4 py-2 text-sm">
-                <a href="#" class="font-medium text-gray-900 hover:text-gray-600">Templates</a>
+                <a href="#" class="font-medium text-red-200 hover:text-gray-600">d</a>
                 <p class="text-gray-500">16 Members</p>
               </div>
               <div class="flex-shrink-0 pr-2">
