first block visible on mobile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-base h-screen w-screen flex justify-center items-center">
     <main class="w-[85%] mx-auto md:h-[75%]">
-        <div class="flex flex-col md:grid md:grid-cols-4 h-full w-full gap-3 ">
+        <div class="flex flex-col md:grid grid-cols-1 md:grid-cols-4 h-full w-full gap-3 ">
             <div class="bg-white rounded-xl">
                 <div class="px-6 py-6">
                     <div class="mx-auto w-fit">
@@ -90,9 +90,9 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-green-500 grid grid-rows-2 gap-3 text-2xl">
-                <div class="bg-pink h-full w-full rounded-xl hidden" id="box-1">
-                    
+            <div class="bg-green-500 grid grid md:grid md:grid-rows-2 md:gap-3 text-2xl">
+                <div class="bg-pink md:h-full md:w-full rounded-xl hidden h-24" id="box-1">
+                    hi
                 </div>
                 <div class="bg-blue h-full w-full rounded-xl hidden" id="box-2">
                     
