first blocks visible on phone wip

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,8 +90,10 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-green-500 grid grid grid-rows-2 md:grid md:grid-rows-2 md:gap-3 text-2xl">
-                <div class="bg-pink md:h-full md:w-full rounded-xl hidden h-24 w-24" id="box-1">
+            <!-- <div class="bg-green-500 grid grid grid-rows-2 md:grid md:grid-rows-2 md:gap-3 text-2xl">
+                <div class="bg-pink md:h-full md:w-full rounded-xl hidden h-24 w-24" id="box-1"> -->
+                    <div class="bg-green-500 flex flex-col md:grid md:grid-rows-2 md:gap-3 text-2xl">
+                <div class="bg-pink md:h-full md:w-full rounded-xl hidden h-28 w-full" id="box-1">
                     
                 </div>
                 <div class="bg-blue h-full w-full rounded-xl hidden" id="box-2">
