maded home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,31 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
-    <title>Document</title>
-</head>
+    <title>info page about</title>
 
 <body>
-    <div id="content" class="flex bg-bit-gray flex-col items-center h-screen ">
-
-        <header class="h-10 bg-purple-900 w-full">
-            <h1 class="text-white text-xl">keuzedeel</h1>
-        </header>
-
-        <div id="button-bar" class="mt-6 w-60  grid grid-cols-1 shadow-sm shadow-black">
-            <button class="m-1 w-4/12 bg-emerald-500">kaaskroket</button>
-            <button class="m-1 w-4/12 bg-emerald-500">kaaskroket</button>
-            <button class="m-1 w-4/12 bg-emerald-500">kaaskroket</button>
-            <button class="m-1 w-4/12 bg-emerald-500">kaaskroket</button>
-            <button class="m-1 w-4/12 bg-emerald-500">kaaskroket</button>
-            <button class="m-1 w-4/12 bg-emerald-500">kaaskroket</button>
+    <header class="bg-light-blue">
+        <nav class="mx-auto max-w-7xl px-6 lg:px-8" aria-label="Top">
+            <div class="flex w-full items-center justify-between border-b border-light-blue py-6 lg:border-none">
+                <div class="flex items-center">
+                    <a href="#">
+                        <span class="sr-only">Your Company</span>
+                        <img class="h-7 w-auto" src="https://www.lifelines.nl/img/logo.svg" alt="">
+                    </a>
+                    <div class="ml-10 hidden space-x-8 lg:block">
+                        <a href="#" class="text-base font-medium text-rose hover:text-indigo-50">Solutions</a>
+                    </div>
+                </div>
+                <div class="ml-10 space-x-4">
+                    <a href="#"
+                        class="inline-block rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-base font-medium text-white hover:bg-opacity-75">Sign
+                        in</a>
+                    <a href="#"
+                        class="inline-block rounded-md border border-transparent bg-white py-2 px-4 text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign
+                        up</a>
+                </div>
+            </div>
+            <div class="flex flex-wrap justify-center gap-x-6 py-4 lg:hidden">
+                <a href="#" class="text-base font-medium text-white hover:text-indigo-50">Solutions</a>
+            </div>
+        </nav>
+    </header>
+    <footer class="bg-white">
+        <div class="mx-auto max-w-7xl py-12 px-6 md:flex md:items-center md:justify-between lg:px-8">
+            <div class="flex justify-center space-x-6 md:order-2">
+                <a href="https://github.com/Dimitriajax/keuzedeel" class="text-gray-400 hover:text-gray-500">
+                    <span class="sr-only">GitHub</span>
+                    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path fill-rule="evenodd"
+                            d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </a>
+            </div>
+            <div class="mt-8 md:order-1 md:mt-0">
+                <p class="text-center text-xs leading-5 text-gray-500">&copy; 2023 Your Company, Inc. All rights
+                    reserved.</p>
+            </div>
         </div>
-        <div id="graf" class="mt-6 w-60">
-            <div class="w-4/12 bg-rose-400 h-1/6">grafiek</div>
-            <div class="w-4/12 bg-rose-400 h-1/6">grafiek</div>
-            <div class="w-4/12 bg-rose-400 h-1/6">grafiek</div>
-            <div class="w-4/12 bg-rose-400 ">grafiek</div>
-        </div>
-    </div>
+    </footer>
 </body>
-
-</html>
